PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.2

- Core:
  . Removed IS_TYPE_IMMUTABLE (it's the same as COPYABLE & !REFCOUNTED). (Dmitry)
  . Removed the sql.safe_mode directive. (Kalle)
  . Removed support for Netware. (Kalle)
  . Fixed bug #54535 (WSA cleanup executes before MSHUTDOWN). (Kalle)
  . Implemented FR #69791 (Disallow mail header injections by extra headers)
    (Yasuo)
  . Implemented FR #49806 (proc_nice() for Windows). (Kalle)
  . Fix pthreads detection when cross-compiling (ffontaine)
  . Fixed memory leaks caused by exceptions thrown from destructors. (Bob,
    Dmitry).
  . Fixed bug #73215 (uniqid() should use better random source). (Yasuo)
  . Fixed bug #73337 (try/catch not working with two exceptions inside a same
    operation). (Dmitry)
  . Implemented FR #72768 (Add ENABLE_VIRTUAL_TERMINAL_PROCESSING flag for
    php.exe). (Michele Locati)
  . Implemented "Convert numeric keys in object/array casts" RFC, fixes
    bugs #53838, #61655, #66173, #70925, #72254, etc. (Andrea)
  . Implemented "Deprecate and Remove Bareword (Unquoted) Strings" RFC.
    (Rowan Collins)
  . Raised minimum supported Windows versions to Windows 7/Server 2008 R2.
    (Anatol)
  . Implemented minor optimization in array_keys/array_values(). (Sara)
  . Fixed bug #73969 (segfault in debug_print_backtrace). (andrewnester)
  . Added PHP_OS_FAMILY constant to determine on which OS we are. (Jan Altensen)
  . Fixed bug #73994 (arginfo incorrect for unpack). (krakjoe)
  . Fixed bug #73973 (assertion error in debug_zval_dump). (andrewnester)
  . Fixed bug #73987 (Method compatibility check looks to original 
    definition and not parent). (pmmaga)
  . Fixed bug #73991 (JSON_OBJECT_AS_ARRAY not respected). (Sara)
  . Fixed bug #74053 (Corrupted class entries on shutdown when a destructor
    spawns another object). (jim at commercebyte dot com)