@@ -260,7 +260,8 @@ END_EXTERN_C()
 #define ZEND_ISSET_ISEMPTY_THIS              186
 #define ZEND_SWITCH_LONG                     187
 #define ZEND_SWITCH_STRING                   188
+#define ZEND_IN_ARRAY                        189
 
-#define ZEND_VM_LAST_OPCODE                  188
+#define ZEND_VM_LAST_OPCODE                  189
 
 #endif
